mdapipkg/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Send_Waiver_Request__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/?SessionId=&quot; + $Api.Session_ID + &quot;&amp;ServerUrl=&quot;+ $Api.Partner_Server_URL_240  + &quot;&amp;Id=&quot; + Id + &quot;&amp;TemplateId=a2J4C000000GmdI&quot; + &quot;&amp;DocuSignVisible=1&quot; + &quot;&amp;DocuSignEmailSubject=Please DocuSign this document: YPO Waiver Request&quot; + &quot;&amp;DocuSignEmailBody=Please review the YPO waiver request and either approve or reject.&quot; + &quot;&amp;DocuSignExpireVoidEnv=0&quot; + &quot;&amp;sc0=1&quot; + &quot;&amp;sc1=attachments&quot; + &quot;&amp;defaultpdf=1&quot; + &quot;&amp;DocuSignTag=0&quot; + &quot;&amp;QMode=DocuSign&quot;, &quot;Send Waiver Request Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Waiver Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separate_Balance_and_Income_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the division have separate balance sheets and income statements?</inlineHelpText>
        <label>Separate Balance and Income Statement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sole_Responsibility_for_Balance_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I have the sole profit/loss balance sheet responsibility for the entire qualifying company?</inlineHelpText>
        <label>Sole Responsibility for Balance Sheet?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Email__c</fullName>
        <label>Spouse/Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Gender__c</fullName>
        <label>Spouse/Partner Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Last_Name__c</fullName>
        <label>Spouse/Partner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Partner_Name__c</fullName>
        <label>Spouse/Partner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stoplight_Status__c</fullName>
        <formula>IMAGE(
CASE(Lead_Health__c,
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;status color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stoplight Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Industry Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accommodation/Hospitality</fullName>
                </value>
                <value>
                    <fullName>Accounting/Bookkeeping/ Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Administrative &amp; Support Services</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Related Svcs</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Construct./Mining Machinery</fullName>
                </value>
                <value>
                    <fullName>Air/Rail/Wtr/Truck/Trnst Etc. Trans</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Health Care Svcs</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Animal Food</fullName>
                </value>
                <value>
                    <fullName>Animal Slaughtering &amp; Processing</fullName>
                </value>
                <value>
                    <fullName>Apparel Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Architectural/ Engineering &amp; Related Svc</fullName>
                </value>
                <value>
                    <fullName>Architectural &amp; Structural Metals</fullName>
                </value>
                <value>
                    <fullName>Arts/Entertainment &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bakeries &amp; Tortilla</fullName>
                </value>
                <value>
                    <fullName>Basic Chemical</fullName>
                </value>
                <value>
                    <fullName>Beer/ Wine&amp; Distil Alcoholic Beverages</fullName>
                </value>
                <value>
                    <fullName>Beverage &amp; Alcohol Product Mfg</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Bldg Matl/Garden Equip &amp; Sup Dealers</fullName>
                </value>
                <value>
                    <fullName>Boiler/ Tank &amp; Shipping Containers</fullName>
                </value>
                <value>
                    <fullName>Broadcasting &amp; Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Business/Personal Support Svcs</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Chemical &amp; Allied Products</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Clothing Accessories Stores</fullName>
                </value>
                <value>
                    <fullName>Coating/Engraving/Heat Treat&amp;Allied Act</fullName>
                </value>
                <value>
                    <fullName>Commercial &amp; Svc Industry Machinery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submit_for_3rd_Party_Verification__c</fullName>
        <formula>IF( 
OR( 
TEXT (Status) = &quot;New&quot;, 
TEXT (Status) = &quot;Unverified&quot;, 
TEXT (Status) = &quot;Initial Qualifying&quot;, 
TEXT (Status) = &quot;Awaiting Chapter Approval&quot;, 
TEXT (Status) = &quot;Ready to Convert&quot; 
), 

HYPERLINK(&apos;/communities/ThirdPartyVerificationFlowVF?varLeadId=&apos;&amp;Id,&quot;Submit for 3rd Party Verification&quot;,&quot;_self&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit for 3rd Party Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_CA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field populated Target  CA associated with Chapter. This is populated through Flow</description>
        <label>Target CA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_CA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_CMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to populate Target CMO from Target chapter. This is populated via a flow</description>
        <label>Target CMO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_CMO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Chapter_Change_Date__c</fullName>
        <description>This field captures the date on which Target chapter is changed on lead. This Field is used in Email templates and not added to the page layouts.</description>
        <label>Target Chapter Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Chapter_ID__c</fullName>
        <formula>Referred_by_Chapter__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Chapter ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Approved__c</fullName>
        <label>Third Party Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_Formula__c</fullName>
        <formula>IF( 
ISPICKVAL(Title__c , &quot;Other&quot;), Title_Other__c  , TEXT(Title__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Other_Opp__c</fullName>
        <label>Title Other</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Other__c</fullName>
        <label>Title Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Question_1__c</fullName>
        <inlineHelpText>How is the candidate’s title equivalent to any of the qualifying titles as ‘top gun’ in the company? Please provide details.</inlineHelpText>
        <label>Title Qualification</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_Question_2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chapter confirms that it has been objectively verified that the prospect is the ‘top gun’ in the company/or division regardless of the fact that his/her title is not one of the YPO qualifying titles</inlineHelpText>
        <label>Title Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Managing Partner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Publisher</fullName>
                    <isActive>false</isActive>
                    <label>Publisher</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tot_Empl_Comp__c</fullName>
        <inlineHelpText>MUST exclude Applicant&apos;s salary.</inlineHelpText>
        <label>Total Employee Compensation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_3rd_Party_Verifier__c</fullName>
        <inlineHelpText>Third-party verifier must be one of these types</inlineHelpText>
        <label>Type of 3rd Party Verifier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Chartered Accountant</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Waiver__c</fullName>
        <label>Type of Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Employee Compensation</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Extraordinary Business Leader</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Corporate Qualifications (Annual Compensation; Sales; No of employees; Enterprise value)</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Qualifications (Annual Compensation; Sales; No of employees; Enterprise value)</label>
                </value>
                <value>
                    <fullName>Geographic Differentiation</fullName>
                    <isActive>false</isActive>
                    <label>Geographic Differentiation</label>
                </value>
                <value>
                    <fullName>Grace Extension</fullName>
                    <isActive>false</isActive>
                    <label>Grace Extension</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ultimate_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Within the qualifying company I hold the ultimate decision making power?</inlineHelpText>
        <label>Ultimate Decision Maker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_3rd_Party_Status__c</fullName>
        <label>Verify 3rd Party Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiver_Decision_Date__c</fullName>
        <label>Waiver Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Posted_to_PRP_Date__c</fullName>
        <label>Waiver Posted to PRP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Requested_Date__c</fullName>
        <label>Waiver Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiver_Sent_For_Comments_Date__c</fullName>
        <label>Waiver Sent For Comments Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Waiver_Status__c</fullName>
        <label>Waiver Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Chapter_needs_to_submit</fullName>
                    <label>Chapter needs to submit</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Call_Owner_Email__c</fullName>
        <label>Welcome Call Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Welcome Call Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Comments__c</fullName>
        <label>3rd Party Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Email__c</fullName>
        <label>3rd Party Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Firm__c</fullName>
        <label>3rd Party Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Name__c</fullName>
        <label>3rd Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Phone__c</fullName>
        <label>3rd Party Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Verification_7_days_No_Reply__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field used to mark when verify 3rd party reminder email should be sent</description>
        <label>3rd Party Verification 7 days No Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_party_verification_requested_date__c</fullName>
        <description>This field stamps through workflow rule when &apos;Verify 3rd Party Status&apos; changes to requested</description>
        <label>3rd party verification requested date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AUS_New_Zealand_N_Asia_S_Asia_CAN</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>North Asia,South Asia,Canada</value>
        </filters>
        <label>AUS/New Zealand, N Asia, S Asia, CAN</label>
        <queue>Membership_Development</queue>
        <sharedTo>
            <group>Product_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveLeadOfficers</fullName>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Chpter_Chair__c</columns>
        <columns>Chapter_Membership_Officer__c</columns>
        <columns>Chapter_Administrator__c</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>Pursue_Status__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Is_Subsidiary__c</columns>
        <columns>Parent_Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referred_by_Chapter__c</field>
            <operation>greaterThan</operation>
            <value>a</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Unverified,Initial Qualifying,Awaiting Chapter Approval,Ready to Convert</value>
        </filters>
        <filters>
            <field>Pursue_Status__c</field>
            <operation>notEqual</operation>
            <value>Will Not Pursue</value>
        </filters>
        <label>Acitve Leads with Officers</label>
        <sharedTo>
            <group>Product_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Stoplight_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Pursue_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/10/2017</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_a_Chapter_does_not_Pursue</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Stoplight_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Pursue_Status__c</columns>
        <columns>Application_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Pursue_Status__c</field>
            <operation>equals</operation>
            <value>Will Not Pursue</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Initial Qualifying</value>
        </filters>
        <filters>
            <field>Application_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2016</value>
        </filters>
        <filters>
            <field>Is_Suitable_for_Another_Chapter__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>12 - Lead a Chapter does not Pursue</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Awaiting_Chapter_Approval</fullName>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CC_Approval__c</columns>
        <columns>CMO_Approval__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Chapter_Approval_Requested_Date__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Application_Date__c</columns>
        <columns>Waiver_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Chapter Approval</value>
        </filters>
        <filters>
            <field>Referred_by_Chapter__c</field>
            <operation>notContain</operation>
            <value>Exchange Test</value>
        </filters>
        <filters>
            <field>Referred_by_Chapter__c</field>
            <operation>contains</operation>
            <value>YPO</value>
        </filters>
        <filters>
            <field>Pursue_Status__c</field>
            <operation>notEqual</operation>
            <value>Chapter Considering,Will Not Pursue</value>
        </filters>
        <label>07 - Leads Awaiting Chapter Approval</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Incomplete_Cert_Status</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Verify_3rd_Party_Status__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Verify_3rd_Party_Status__c</field>
            <operation>equals</operation>
            <value>Incomplete</value>
        </filters>
        <filters>
            <field>Application_Date__c</field>
            <operation>equals</operation>
            <value>1/10/2017</value>
        </filters>
        <label>11 - Leads Incomplete (Cert Status)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Ready_to_Convert</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Application_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Days_in_Ready_to_Convert_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Ready to Convert</value>
        </filters>
        <filters>
            <field>Waiver_Status__c</field>
            <operation>notEqual</operation>
            <value>Chapter_needs_to_submit,Pending</value>
        </filters>
        <filters>
            <field>Referred_by_Chapter__c</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <label>08 - Leads Ready to Convert</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_Ready_to_Convertty</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Application_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Days_in_Ready_to_Convert_Status__c</columns>
        <columns>Spouse_Partner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Ready to Convert</value>
        </filters>
        <filters>
            <field>Waiver_Status__c</field>
            <operation>notEqual</operation>
            <value>Chapter_needs_to_submit,Pending</value>
        </filters>
        <filters>
            <field>Referred_by_Chapter__c</field>
            <operation>notEqual</operation>
            <value>Exchange Test</value>
        </filters>
        <label>08 - Leads Ready to Convertty</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_with_3rd_Party_Info_Received</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Region__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Verify_3rd_Party_Status__c</columns>
        <columns>DOB_doc_and_3rd_Party_Info_complete__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Chapter_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DOB_doc_and_3rd_Party_Info_complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Rejected,Closed - Converted,Closed - Unqualified,Closed - Existing Contact</value>
        </filters>
        <filters>
            <field>Verify_3rd_Party_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>notEqual</operation>
            <value>International</value>
        </filters>
        <label>03 - Leads with 3rd Party Info Received</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_with_3rd_Party_Pending</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Stoplight_Status__c</columns>
        <columns>Verify_3rd_Party_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Initial Qualifying</value>
        </filters>
        <filters>
            <field>Verify_3rd_Party_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>04 - Leads with 3rd Party Pending</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_with_3rd_Party_Received</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Stoplight_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Verify_3rd_Party_Status__c</columns>
        <columns>Application_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Initial Qualifying</value>
        </filters>
        <filters>
            <field>Verify_3rd_Party_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>06 - Leads with 3rd Party Received</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_with_3rd_Party_Requested</fullName>
        <columns>FULL_NAME</columns>
        <columns>Referred_by_Chapter__c</columns>
        <columns>Region__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Stoplight_Status__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Verify_3rd_Party_Status__c</columns>
        <columns>X3rd_party_verification_requested_date__c</columns>
        <columns>Application_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Initial Qualifying</value>
        </filters>
        <filters>
            <field>Verify_3rd_Party_Status__c</field>
            <operation>equals</operation>
            <value>Requested</value>
        </filters>
        <filters>
            <field>Pursue_Status__c</field>
            <operation>equals</operation>
            <value>Will Pursue</value>
        </filters>
        <label>05 - Leads with 3rd Party Requested</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>